# cmdtools

./: CHANGELOG.md  LICENSE  README.md  __init__.py  cmdtools.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeberg.yml  python-package.yml
cmdtools/: __init__.py  base.py  cmdtools.py  errors.py
cmdtools/callback/: base.py  option.py
cmdtools/converter/: base.py  converter.py
cmdtools/ext/: command.py  file.py
cmdtools/utils/: string.py
docs/: conf.py  index.rst  install.rst  quickstart.rst
docs/_templates/apidoc/: package.rst.jinja  toc.rst.jinja
docs/examples/: callback_attributes.rst  coroutine_callback.rst  default_arguments.rst
docs/ext/: command.rst
examples/01basic_ping_pong/: main.py
examples/02say_command/: main.py
examples/03default_argument/: main.py
examples/04asynchronous_callbacks/: main.py
examples/05callback_attributes/: main.py
examples/06match_argument/: main.py
examples/07wildcard_parameter/: main.py
examples/08extension/01basic_ping_pong/: main.py
examples/08extension/02CommandModule/01load_module/: main.py  ping.py
examples/08extension/02CommandModule/02load_classes/: commands.py  main.py
examples/08extension/03CommandDir/01load_module/: main.py
examples/08extension/03CommandDir/02load_classes/: main.py
examples/08extension/04CommandWrapper/: main.py
tests/: __init__.py  test_attributes.py  test_command_ext.py  test_convert.py  test_error.py  test_exec.py  test_extension.py  test_file_ext.py  test_parse.py  test_process.py
tests/assets/: cmdmod.py
(+6 files in other folders)
